# gaze

./: .gitignore  Cargo.toml  DESIGN.md
.cargo/: config
shader/: flat.frag  flat.vert  text.frag  text.vert
src/: cfg.rs  drawing.rs  filebuf.rs  fileview.rs  linemap.rs  main.rs  sparse.rs
src/filebuf/: linemap.rs  sparse.rs  test.rs
src/fileview/: drawing.rs
windowing/: Cargo.toml
windowing/src/: clipboard.rs  lib.rs
