[package]
name = "gaze"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = { package = "windowing", path = "windowing" }
anyhow = "1"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
glyph_brush = "0.7"
glam = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"

[workspace]
members = [
    "windowing",
]
