[package]
name = "gaze"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = { package = "windowing", path = "windowing" }
anyhow = "1"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
glyph_brush_draw_cache = "0.1"
ab_glyph = "0.2"
glam = "0.23"
serde = { version = "1", features = ["derive"] }
toml = { version = "0.7", default-features = false, features = ["parse"] }
parking_lot = "0.12"
rustc-hash = "1"

[dev-dependencies]
rand = "0.8"
rand_xoshiro = "0.6"

[workspace]
members = [
    "windowing",
]
