[package]
name = "windowing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = { version = "0.31" }
glutin = { version = "0.28" }
winit = { version = "0.26" }
arboard = { version = "3", default-features = false }
nix = { version = "0.26", default-features = false, features = ["process"] }
native-dialog = { version = "0.6" }

[lib]
# crate-type = ["dylib"]
